<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="@dimen/card_layout_margin"
        style="@style/FilledCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/card_content_padding_v"
                android:gravity="center_vertical">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher_foreground"
                    android:background="@drawable/ic_card_icon_background"
                    android:backgroundTint="@color/ic_launcher_background"
                    app:shapeAppearanceOverlay="@style/RoundedImage"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/card_content_padding_h"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/CardTitle"
                        android:text="@string/controls_summary_title"/>
                    <TextView
                        android:id="@+id/controls_secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/CardSecondary"
                        android:text="@string/controls_summary_secondary_error"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:visibility="visible"
                android:id="@+id/controls_installed_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:text="@string/controls_summary_installed_version"/>
            <TextView
                android:visibility="visible"
                android:id="@+id/controls_this_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_content_padding_v"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:text="@string/controls_summary_this_version"/>
            <TextView
                android:visibility="visible"
                android:id="@+id/controls_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_content_padding_v"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:text="@string/controls_summary_body_error"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/controls_summary_button_install"
                android:visibility="visible"
                app:icon="@drawable/ic_outline_file_download_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controls_summary_button_install"
                style="@style/Widget.Material3.Button.Icon"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/controls_summary_button_uninstall"
                    android:visibility="visible"
                    app:icon="@drawable/ic_outline_delete_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_summary_button_uninstall"
                    style="@style/Widget.Material3.Button.Icon"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/controls_summary_button_reinstall"
                    android:visibility="visible"
                    app:icon="@drawable/ic_outline_file_download_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/button_margin_h"
                    android:text="@string/controls_summary_button_reinstall"
                    style="@style/Widget.Material3.Button.Icon"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/controls_summary_button_update"
                    android:visibility="visible"
                    app:icon="@drawable/ic_outline_system_update_alt_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/button_margin_h"
                    android:text="@string/controls_summary_button_update"
                    style="@style/Widget.Material3.Button.Icon"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/controls_card_manage"
        android:layout_marginTop="@dimen/card_layout_margin"
        style="@style/FilledCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_outline_work_outline_24"
                    app:tint="@color/card_ic_teal_foreground"
                    android:background="@drawable/ic_card_icon_background"
                    android:backgroundTint="@color/card_ic_teal_background"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_content_padding_h"
                    android:textAppearance="@style/CardTitle"
                    android:text="@string/controls_manage_title"/>
            </LinearLayout>
            <TextView
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_content_padding_v"
                android:layout_marginBottom="@dimen/card_content_padding_v"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:text="@string/controls_manage_body"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/controls_manage_button"
                android:visibility="visible"
                app:icon="@drawable/ic_outline_theme_store_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controls_manage_button"
                style="@style/Widget.Material3.Button.Icon"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/controls_card_special"
        android:layout_marginTop="@dimen/card_layout_margin"
        style="@style/FilledCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_outline_star_rate_24"
                    app:tint="@color/card_ic_amber_foreground"
                    android:background="@drawable/ic_card_icon_background"
                    android:backgroundTint="@color/card_ic_amber_background"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_content_padding_h"
                    android:textAppearance="@style/CardTitle"
                    android:text="@string/controls_special_title"/>
            </LinearLayout>
            <TextView
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_content_padding_v"
                android:layout_marginBottom="@dimen/card_content_padding_v"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:text="@string/controls_special_body"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/controls_special_button_reinstall"
                android:visibility="visible"
                app:icon="@drawable/ic_outline_restart_alt_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controls_special_button_reinstall"
                style="@style/Widget.Material3.Button.Icon"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="@dimen/card_layout_margin"
        android:layout_marginBottom="@dimen/card_layout_margin"
        style="@style/FilledCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_outline_theme_store_24"
                    app:tint="@color/card_ic_cyan_foreground"
                    android:background="@drawable/ic_card_icon_background"
                    android:backgroundTint="@color/card_ic_cyan_background"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_content_padding_h"
                    android:textAppearance="@style/CardTitle"
                    android:text="@string/controls_general_title"/>
            </LinearLayout>
            <TextView
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_content_padding_v"
                android:layout_marginBottom="@dimen/card_content_padding_v"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:text="@string/controls_general_body"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/controls_general_textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="@dimen/inputbox_CornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/inputbox_CornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/inputbox_CornerRadius"
                app:boxCornerRadiusBottomEnd="@dimen/inputbox_CornerRadius"
                android:hint="@string/controls_general_input_label">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/controls_general_button_uninstall"
                android:visibility="visible"
                android:layout_marginTop="@dimen/card_content_padding_v"
                app:icon="@drawable/ic_outline_delete_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controls_general_button_uninstall"
                style="@style/Widget.Material3.Button.Icon"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>