<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cards_samsung_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_status"
        android:layout_marginTop="@dimen/card_layout_margin"
        style="@style/FilledCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/card_status_ic"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_outline_error_outline_24"
                    app:tint="@color/card_status_ic_error_foreground"
                    android:background="@drawable/ic_card_icon_background"
                    android:backgroundTint="@color/card_status_ic_error_background"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/card_content_padding_h"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:id="@+id/card_status_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/CardTitle"
                        android:text="@string/card_status_error_title"/>
                    <TextView
                        android:id="@+id/card_status_secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/CardSecondary"
                        android:text="@string/card_status_error_secondary"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/card_status_instructions"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_content_padding_v"
                android:layout_marginBottom="@dimen/card_content_padding_v"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:text="@string/card_status_body"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/card_status_tutorial_button"
                android:visibility="visible"
                app:icon="@drawable/ic_baseline_play_arrow_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_status_button_tutorial"
                style="@style/Widget.Material3.Button.Icon"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_controls"
        android:layout_marginTop="@dimen/card_layout_margin"
        style="@style/FilledCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_outline_settings_24"
                app:tint="@color/card_controls_ic_foreground"
                android:background="@drawable/ic_card_icon_background"
                android:backgroundTint="@color/card_controls_ic_background"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/card_content_padding_h"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/CardTitle"
                    android:text="@string/card_controls_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/CardSecondary"
                    android:text="@string/card_controls_secondary"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_tutorial"
        android:layout_marginTop="@dimen/card_layout_margin"
        style="@style/FilledCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_outline_file_download_24"
                app:tint="@color/card_tutorial_ic_foreground"
                android:background="@drawable/ic_card_icon_background"
                android:backgroundTint="@color/card_tutorial_ic_background"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/card_content_padding_h"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/CardTitle"
                    android:text="@string/card_tutorial_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/CardSecondary"
                    android:text="@string/card_tutorial_secondary"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>